--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,10 @@ ul {
   padding-left: 0;
 }
 
+button {
+  cursor: pointer;
+}
+
 p,
 h1,
 h2,
@@ -73,4 +77,287 @@ a {
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.burger-btn {
+  border: none;
+  background-color: transparent;
+}
+.burget-icon {
+  display: block;
+  fill: #2f2f37;
+}
+
+.whole-bar {
+  justify-content: space-between;
+  display: flex;
+  align-items: center;
+}
+.bar-box,
+.contacts {
+  display: none;
+}
+
+.logo {
+  padding: 16px 0;
+  color: #4d5ae5;
+  font-family: "Raleway", sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-align: left;
+  text-transform: uppercase;
+  display: block;
+}
+
+.logo-header {
+  color: #2e2f42;
+  font-family: Raleway;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
+  }
+
+  .contacts {
+    display: block;
+    color: #434455;
+    font-style: normal;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .bar-box {
+    display: flex;
+    gap: 40px;
+  }
+
+  .logo-header {
+    margin-right: 120px;
+  }
+
+  .nav-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .header-bar {
+    padding: 24px 0;
+    display: block;
+    color: #2e2f42;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: left;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  .line {
+    position: relative;
+    color: #404bbf;
+  }
+
+  .line:after {
+    position: absolute;
+    content: "";
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #404bbf;
+  }
+
+  .header-bar:hover {
+    color: #404bbf;
+  }
+
+  .header-bar:hover {
+    color: #404bbf;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: left;
+  }
+  .header-bar:focus {
+    color: #404bbf;
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: left;
+    text-decoration: underline;
+  }
+
+  .contact-list {
+    flex-direction: column;
+    display: flex;
+    gap: 12px;
+  }
+  .contacts {
+    color: #434455;
+    font-style: normal;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .logo-header {
+    margin-right: 76px;
+  }
+
+  .contacts {
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    font-size: 16px;
+  }
+
+  .contact-list {
+    flex-direction: row;
+    gap: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-modal {
+    display: none;
+  }
+}
+
+/* mobile menu */
+
+.mobile-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  background-color: #fff;
+  opacity: 1;
+  pointer-events: none;
+  visibility: hidden;
+}
+
+.mobile-modal.is-open {
+  visibility: visible;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.mobile-modal-container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+  padding-top: 72px;
+  padding-bottom: 40px;
+  position: relative;
+}
+
+.btn-close-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  border: 1px solid rgba(46, 47, 66, 0.1);
+  background-color: rgb(231, 233, 252, 0.1);
+}
+
+.mobile-nav {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.modal-nav-item {
+}
+
+.mobile-nav-link.first-mobile-link {
+  color: #404bbf;
+}
+.mobile-nav-link {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+
+.mobile-contacts {
+  font-style: normal;
+  margin-top: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.mobile-tel {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #4d5ae5;
+}
+
+.mobile-email {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+.mobile-social-list {
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
+
+.mobile-social {
+  margin-top: 48px;
+}
+
+.mobile-social-link {
+  background-color: #4d5ae5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.mobile-social-icon {
+  fill: #f4f4fd;
+}
+
+.mobile-social-item {
+  width: 40px;
+  height: 40px;
 }
